# SynthFlow

./: .cursorrules  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Makefile  README.md  SYNTHFLOW_WINDOWS_PACKAGE_SUMMARY.md  VERSION  build.bat  build.sh  debug.txt  minimal_main.cpp  output.txt  run-tests.bat  sfpm.bat  sfpm.sh  synthflow.bat  test-installation.bat  test-synthflow.bat
.github/workflows/: ci.yml  release.yml
cmake/: FindLibcurl.cmake  Info.plist.in  Linux.cmake  MacOS.cmake  Windows.cmake  dmg-setup.scpt
cmake/debian/: postinst  prerm
cmake/rpm/: postinst  prerm
compiler/: README.md
compiler/include/: ast.h  bytecode.h  bytecode_compiler.h  code_generator.h  codegen_visitor.h  error_reporter.h  http_client.h  http_server.h  interpreter.h  js_transpiler.h  lexer.h  metaprogramming.h  modules.h  optimizer.h  parser.h  semantic_analyzer.h  structs.h  token.h  types.h  vm.h  wasm_transpiler.h
compiler/src/: main.cpp
compiler/src/ast/: ast_visitor.cpp
compiler/src/bytecode/: bytecode_compiler.cpp  vm.cpp
compiler/src/codegen/: code_generator.cpp  js_transpiler.cpp  wasm_transpiler.cpp
compiler/src/http/: http_client.cpp  http_server.cpp
compiler/src/interpreter/: interpreter.cpp
compiler/src/lexer/: lexer.cpp
compiler/src/optimizer/: optimizer.cpp
compiler/src/parser/: parser.cpp
compiler/src/semantic/: semantic_analyzer.cpp
compiler/tests/: test_codegen.cpp  test_lexer.cpp  test_semantic.cpp
docs/: FUTURE_FEATURES.md  SYNTHFLOW_USAGE_GUIDE.md  SynthFlow_Zero_to_Hero_Book.md  _config.yml  agent-development-kit.md  ai_cheatsheet.md  best-practices.md  codegen.md  compiler-architecture.md  contributing.md  design-principles.md  gemini-integration.md  index.md  internationalization.md  lexer.md  parser.md  performance.md  roadmap.md  safety-features.md
examples/: api_test.sf  benchmark.sf  builtin_test.sf  comprehensive_test.sf  const_error_test.sf  const_test.sf  data_processing_test.sf  demo.sf  feature_verify.sf  fibonacci.sf  fullstack_app.sf  gemini_test.sf  hello.synth  hello_world.sf  interpolation_test.sf  lambda_test.sf  match_test.sf  mobile_counter.sf  networking_test.sf  os_subprocess_test.sf  pwa_todo.sf  quantum_demo.sf  quickwin_test.sf  sadk_demo.sf  safety_demo.sf  security_test.sf  simple_test.sf  test_simple.sf  trycatch_test.sf  web_app_demo.sf  web_server_demo.sf
examples/web-test/: server.sf
ide-plugins/vscode/: .vscodeignore  README.md  package-lock.json  package.json  synthflow-language-support-0.0.1.vsix  synthflow-language-support-0.0.2.vsix
ide-plugins/vscode/icons/: synthflow-icon-theme.json
ide-plugins/vscode/snippets/: synthflow.json
ide-plugins/vscode/src/: extension.ts
ide-plugins/vscode/syntaxes/: synthflow.tmLanguage.json
lsp-server/src/: document_manager.h  json_utils.h  lsp_providers.h  main.cpp
mcp-server/src/: json_mcp.h  main.cpp
packaging/: README.md  build-all-platforms.sh  build-windows.bat  create-installer.bat  install-linux.sh  install-macos.sh  install-windows.bat  installer-config.txt  synthflow-debian.sh  synthflow-installer.nsi  synthflow-setup.bat  synthflow-uninstall.bat  synthflow-windows.nsi
runtime/: async_runtime.h
scripts/: build-direct.bat  build-direct.ps1  build-vs.bat  build.bat  build.sh  install-helper.ps1  install-mingw.ps1  run-example.bat  test.bat  update-version.bat  update-version.sh
stdlib/: agent.sf  ai.sf  api.sf  array.sf  async.sf  classification.sf  clustering.sf  config.sf  crypto.sf  database.sf  dataframe.sf  datetime.sf  deployment.sf  dimensionality_reduction.sf  experiment_tracking.sf  feature_store.sf  ffi.sf  http.sf  io.sf  json.sf  list.sf  logging.sf  map.sf  math.sf  metrics.sf  mobile.sf  model_persistence.sf  model_selection.sf  monitoring.sf  networking.sf  neural_network.sf  numpy.sf  os.sf  pipeline.sf  plotting.sf  preprocessing.sf  pwa.sf  quantum.sf  regex.sf  regression.sf  (+14 more)
tests/: repro_if.sf  simple_test.cpp  stdlib_integration_test.sf  stdlib_quick_test.sf  test_array.sf  test_array_single.sf  test_arrays.cpp  test_break_continue.cpp  test_debug.sf  test_empty_map.sf  test_for_loop.cpp  test_gemini_builtins.sf  test_gemini_live.sf  test_gemini_simple.sf  test_import.sf  test_map.sf  test_member.sf  test_min.sf  test_ml_algo.sf  test_ml_array.sf  test_ml_dataframe.sf  test_neural_network.sf  test_parser.cpp  test_quantum.sf  test_sadk.sf  test_sadk_simple.sf  test_single.sf  test_struct.sf  test_wasm_standalone.cpp  test_while_loop.cpp
tools/synthpkg/: synthpkg.sf
